# predictorengines

./: .gitignore  Betting Tracker Example.xlsx  Betting Tracker.xlsx  GUI_UPGRADE_PLAN.md  MODEL_SPRINT_NOTES.md  README.md  SESSION_HANDOFF.md  V2_PLAN.md  V3_NOTES.md  V4_PLAN.md  V5_NOTES.md  V5_PLAN.md  V6_PLAN.md  api_keys.py  backtest_betting.py  backtest_snapshots.py  bsd_client.py  build_annexc.py  build_squads_2026.py  calibrate.py  clv.py  clv_suite.py  confederation_adj.py  context.py  daily_summary.py  dashboard_preview.html  dixoncoles.py  draw_backtest.py  draw_calibration.py  draw_lopsided.py  edge.py  injuries.py  market_blend.py  merge_results.py  odds.csv  odds_sample.csv  outrights.py  predictions_worldcup_2026.csv  predictor.py  preflight.py  (+52 more)
app/: README.md  __init__.py  bankroll_store.py  dashboard_data.py  main.py  market_blend.py  migrate_bankroll.py  model_audit.py  portfolio.py  provenance.py  requirements.txt  run.sh  security.py  server.py  settings_store.py
cfb/: README.md  __init__.py  ats_backtest.py  bankroll.py  blend_eval.py  compare_win_totals.py  edge.py  elo.py  engine.py  epa.py  fetch_data.py  fetch_win_total_lines.py  import_cfbd_lines.py  odds.csv  odds_sample.csv  power.py  predictor.py  priors.py  projected_win_totals_2026.csv  totals_backtest.py  validate.py  win_totals.py
club_soccer/: README.md  __init__.py  calibrate.py  competitions.py  corners_model.py  edge.py  engine.py  fetch.py  fetch_fdorg.py  model.py  names.py  player_features.py  seed_footballdata.py  seed_openfootball.py  seed_real.py  update.sh  validate.py
contracts/: __init__.py  protocol.py  registry.py
core/: __init__.py  bankroll.py  clv.py  clv_suite.py
data/: absences.csv  absences.tmp.csv  annexc_thirds.json  api_keys.example.json  bankroll.json  calibration.json  conf_adj.json  context_coef.json  dc_params.json  edge_snapshots.example.csv  ko_overrides.csv  ledger.csv  market_blend.json  odds_history.csv  odds_live.csv  prediction_snapshots.example.csv  results.csv  squad_ratings.csv  squads.csv  suite_bankroll.json  suite_ledger.csv  title_history.csv  totals_calibration.json  update_runs.json  validation_baseline.json  validation_suite.json  wc2018_odds.csv  wc2022_odds.csv  wc_v4_validation.json
docs/: 1x2_feature_additions.md  DATA_SOURCING_PLAN.md  ENGINE_IMPROVEMENT_PLAN.md  REFACTOR_PLAN.md  model_improvements_changelog.md  player_form_poc_plan.md
engines/: __init__.py
golf/: README.md  US_OPEN_2026_3BALL_R1.md  US_OPEN_2026_REPORT.md  __init__.py  calibrate.py  edge.py  engine.py  fetch.py  market.py  model.py  portfolio.py  price_threeballs_r1.py  provider_qa.py  providers.py  refresh.py  round_pricer.py  season.py  simulate.py  simulate_inplay.py  store.py  tee_times.py  update.sh  validate.py  weekly_report.py
governance/: __init__.py  live.py  scenario.py
nhl/: README.md  __init__.py  backtest.py  edge.py  engine.py  model.py  predictor.py
operations/: __init__.py  operations.py
plans/: tennis_engine_plan.md
research/: __init__.py  consistency.py  feature_store.py  market_model.py  matchup.py  staking.py  tournaments.py  validate_v4.py
tennis/: README.md  __init__.py  (+11 more)
(+466 files in other folders)
