# Project scaffolding introduced in refactor Phase 0 (see docs/REFACTOR_PLAN.md).
#
# This file currently provides dependency declarations and tool configuration only.
# The canonical test runner is `python run_checks.py`, which delegates to pytest
# markers over the consolidated `tests/` tree.

[project]
name = "predictors"
version = "0.0.0"
description = "Multi-sport prediction and betting-edge engines (World Cup soccer, club soccer, college football, golf) with a web app layer."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "requests",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "pywebview>=5.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "fast: offline regression checks",
    "gates: per-engine validation gates",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative starter set; tighten in later phases.
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length handled by formatter; many data tables exceed it
