# Project scaffolding introduced in refactor Phase 0 (see docs/REFACTOR_PLAN.md).
#
# This file currently provides dependency declarations and tool configuration only.
# A build-system / installable package layout is intentionally deferred to Phases 2-3,
# where the flat root modules and per-sport packages are restructured under
# src/predictors/. Until then, the canonical test runner is `python run_checks.py`,
# which isolates each suite in its own subprocess (necessary today because several
# engines share generic module names — edge.py, predictor.py, model.py — and collide
# under flat collection; see PHASE0 baseline notes).

[project]
name = "predictors"
version = "0.0.0"
description = "Multi-sport prediction and betting-edge engines (World Cup soccer, club soccer, college football, golf, tennis, NHL) with a web app layer."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "requests",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "pywebview>=5.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
# NOTE: flat `pytest` collection across the whole repo does NOT work yet — several
# test modules do bare `from edge import ...` / `from predictor import ...`, which
# resolve to the wrong sport's module when all tests share one process. Unifying test
# discovery under pytest is a Phase 5 deliverable (after the package restructure).
# For now, run the canonical suite with `python run_checks.py`, or invoke pytest on
# individual, self-contained test files.
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative starter set; tighten in later phases.
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length handled by formatter; many data tables exceed it
